--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,11 @@
     <string name="cinema">Cinema</string>
     <string name="schatkist">Schatkist</string>
     <string name="musicRoom">Music Room</string>
-    <string name="rugzak">Rugzak</string>
+    <string name="backpack">Rugzak</string>
     <string name="billboard">Billboard</string>
-    <string name="prikbord">Prikbord</string>
+    <string name="bulletinboard">Prikbord</string>
     <string name="winkelCentrum">Winkelcentrum</string>
     <string name="button_open">Open</string>
     <string name="button_unpin">unpin</string>
+    <string name="request_consultation_button">Aanvraag gesprek</string>
 </resources>
