--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">FaithAndroid</string>
-    <string name="wolkenkrabber">Wolkenkrabber</string>
+    <string name="skyscraper">Wolkenkrabber</string>
     <string name="cinema">Cinema</string>
-    <string name="schatkist">Schatkist</string>
+    <string name="treasure_chest">Schatkist</string>
     <string name="musicRoom">Music Room</string>
     <string name="backpack">Rugzak</string>
     <string name="billboard">Billboard</string>
@@ -11,4 +11,8 @@
     <string name="button_open">Open</string>
     <string name="button_unpin">unpin</string>
     <string name="request_consultation_button">Aanvraag gesprek</string>
+    <string name="audio">Audio</string>
+    <string name="Image">Foto</string>
+    <string name="video">Video</string>
+    <string name="text">Tekst</string>
 </resources>
