--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
     <string name="welkom">Goed je terug te zien!</string>
     <string name="naam">Jane Doe</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">login</string>
     <string name="title_activity_test">TestActivity</string>
     <!-- Strings used for fragments for navigation -->
@@ -43,4 +42,5 @@
     <string name="label">button</string>
     <string name="forgot_password">wachtwoord vergeten</string>
     <string name="password">wachtwoord</string>
+    <string name="OK">OK</string>
 </resources>
