accidental sprint2 commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="forgot_password">wachtwoord vergeten</string>
     <string name="password">wachtwoord</string>
     <string name="OK">OK</string>
+    <string name="welkom_bij_faith">welkom bij faith</string>
 </resources>
