textpost opmaken + navigatie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="password">wachtwoord</string>
     <string name="OK">OK</string>
     <string name="welkom_bij_faith">welkom bij faith</string>
+    <string name="titel">titel</string>
+    <string name="tekst">tekst</string>
 </resources>
