--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="label">button</string>
     <string name="forgot_password">wachtwoord vergeten</string>
     <string name="password">wachtwoord</string>
+    <string name="welkom_bij_faith">Welkom By Faith</string>
 </resources>
