--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="welkom_bij_faith">welkom bij faith</string>
     <string name="titel">titel</string>
     <string name="tekst">tekst</string>
+    <string name="textview">TextView</string>
 
 </resources>
