--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FaithAndroid</string>
+    <string name="app_name">GROW.</string>
     <string name="skyscraper">Wolkenkrabber</string>
     <string name="cinema">Cinema</string>
     <string name="treasure_chest">Schatkist</string>
@@ -47,5 +47,6 @@
     <string name="welkom_bij_faith">welkom bij faith</string>
     <string name="titel">titel</string>
     <string name="tekst">tekst</string>
+    <string name="under_construction">Aan dit deel wordt nog gewerkt</string>
 
 </resources>
