--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="tryAgain">probeer opnieuw</string>
     <string name="aanvraag_gesprek_dialogbox">gesprek met je begeleider</string>
     <string name="aanvraag_gesprek_dialogbox_message">Wil je graag een gesprek aanvragen met je begeleider?</string>
+    <string name="no_connection">Er kon geen verbinding gemaakt worden met de server</string>
 </resources>
