--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="aanvraag_gesprek_dialogbox">gesprek met je begeleider</string>
     <string name="aanvraag_gesprek_dialogbox_message">Wil je graag een gesprek aanvragen met je begeleider?</string>
     <string name="no_connection">Er kon geen verbinding gemaakt worden met de server</string>
+    <string name="nieuwe_tekst_post_toevoegen">Nieuwe tekst post toevoegen</string>
+    <string name="toevoegen">Toevoegen</string>
 </resources>
