kleur disabled buttons grijs gemaakt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,11 +43,11 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="label">button</string>
     <string name="forgot_password">wachtwoord vergeten</string>
-    <string name="password">wachtwoord</string>
+    <string name="password">Wachtwoord</string>
     <string name="OK">OK</string>
     <string name="grow.">GROW.</string>
-    <string name="titel">titel</string>
-    <string name="tekst">tekst</string>
+    <string name="titel">Titel</string>
+    <string name="tekst">Tekst</string>
 
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
@@ -55,7 +55,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="email">Vul hier je e-mail in</string>
     <string name="tryAgain">probeer opnieuw</string>
-    <string name="aanvraag_gesprek_dialogbox">gesprek met je begeleider</string>
+    <string name="aanvraag_gesprek_dialogbox">Gesprek met je begeleider</string>
     <string name="aanvraag_gesprek_dialogbox_message">Wil je graag een gesprek aanvragen met je begeleider?</string>
     <string name="no_connection">Er kon geen verbinding gemaakt worden met de server</string>
     <string name="nieuwe_tekst_post_toevoegen">Nieuwe tekst post toevoegen</string>
