--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,7 @@
     <string name="jane_doe">Jane Doe</string>
     <string name="jane_doe_gmail_com">jane.doe@gmail.com</string>
     <string name="donkere_modus">Donkere modus</string>
+    <string name="nieuw_wachtwoord_confirmeren">Nieuw wachtwoord confirmeren</string>
+    <string name="nieuw_wachtwoord">Nieuw wachtwoord</string>
+    <string name="oud_wachtwoord">Oud wachtwoord</string>
 </resources>
