--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,7 @@
     <string name="nieuw_wachtwoord_confirmeren">Nieuw wachtwoord confirmeren</string>
     <string name="nieuw_wachtwoord">Nieuw wachtwoord</string>
     <string name="oud_wachtwoord">Oud wachtwoord</string>
+    <string name="camera">Camera</string>
+    <string name="camerafolder">Camerafolder</string>
+    <string name="plaatsen">Plaatsen</string>
 </resources>
