--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,15 +75,9 @@
     <string name="nieuw_wachtwoord">Nieuw wachtwoord</string>
     <string name="oud_wachtwoord">Oud wachtwoord</string>
 
-        <string name="selected_item">Selected item:</string>
-    <string name="titelspinner">Van opgeslagen plaatsen:</string>
+        <string name="hint_text">Opgeslagen plaatsen</string>
 
-    <string-array name="Plaatsen">
-            <item>Wolkenkrabber</item>
-            <item>Cinema</item>
-            <item>Schatkist</item>
-            <item>Rugzak</item>
-        </string-array>
+
 
 
 </resources>
