foto toevoegen lijst ophalen implementatie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,6 +78,7 @@
     <string name="camera">Camera</string>
     <string name="camerafolder">Camerafolder</string>
     <string name="plaatsen">Plaatsen</string>
+    <string name="vul_hier_je_titel_in">vul hier je titel in:</string>
 
 
 </resources>
