buttons geïmplementeerd (toevoegen nog niet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,7 @@
     <string name="start">Start</string>
     <string name="pauze">Pauze</string>
     <string name="stop">Stop</string>
+    <string name="Beluister">Beluister</string>
 
 
 </resources>
