Toevoegen filter + stopfilter button + kleine aanpassingen filter: niet afgewerkt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="vul_hier_je_titel_in">vul hier je titel in:</string>
     <string name="nieuwe_video_post_toevoegen">nieuwe video post toevoegen</string>
     <string name="nieuwe_post_toevoegen">nieuwe post toevoegen</string>
+    <string name="soort_post_filter">Soort post filter</string>
 
 
 
