verdergewerkt aan audio toevoegen; -audio opname wordt nu lokaal opgeslagen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="pauze">Pauze</string>
     <string name="stop">Stop</string>
     <string name="Beluister">Beluister</string>
+    <string name="Pauze">Pauze</string>
 
 
 </resources>
