--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="tekst">Tekst</string>
     <string name="under_construction">Aan dit deel wordt nog gewerkt</string>
 
-    <string name="welcome">"Welcome !"</string>
+    <string name="welcome">"Welkom "</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
